src/main/java/com/test/webtest/global/error/ErrorResponse.java
package com.test.webtest.global.error;

public class ErrorResponse {
}
